--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,8 +6,9 @@ Rails:
   Enabled: true
 
 AllCops:
-  TargetRubyVersion: 2.3
+  TargetRubyVersion: 2.4
   TargetRailsVersion: 5.2
+  NewCops: enable
 
 Metrics/AbcSize:
   Enabled: false
@@ -19,19 +20,19 @@ Metrics/ClassLength:
   Enabled: false
 
 Metrics/CyclomaticComplexity:
-  Max: 20
+  Enabled: false
 
 Layout/LineLength:
   Max: 140
 
 Metrics/MethodLength:
-  Max: 60
+  Enabled: false
 
 Metrics/ModuleLength:
   Enabled: false
 
 Metrics/PerceivedComplexity:
-  Max: 25
+  Max: 35
 
 Rails/ApplicationJob:
   Enabled: false
@@ -60,15 +61,21 @@ Style/FrozenStringLiteralComment:
 Style/Documentation:
   Enabled: false
 
-# required for travis/ci (symbolic links problem)
 Style/ExpandPathArguments:
   Enabled: false
-
-Style/HashEachMethods:
-  Enabled: true
 
 Style/HashTransformKeys:
   Enabled: false
 
 Style/HashTransformValues:
   Enabled: false
+
+Naming/FileName:
+  Enabled: true
+  Exclude:
+    - sample-saml-initializers.rb
+
+Naming/VariableNumber:
+  Enabled: true
+  Exclude:
+    - 'test/**/*'
