--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,9 +10,12 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ['2.6', '2.4']
-        redmine: ['4.1-stable', 'master']
+        ruby: ['2.7', '2.6', '2.4']
+        redmine: ['4.1-stable', '4.2-stable', 'master']
         db: ['postgres', 'mysql']
+        exclude:
+          - ruby: '2.7'
+            redmine: 4.1-stable
       fail-fast: false
 
     services:
@@ -31,13 +34,12 @@ jobs:
           --health-retries 5
 
       mysql:
-        image: mysql:5.7
+        image: mysql:8.0
         env:
-          MYSQL_USER: root
-          MYSQL_PASSWORD: ''
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: 'BestPasswordEver'
         ports:
-          - 3306:3306
+          # will assign a random free host port
+          - 3306/tcp
         options: >-
           --health-cmd="mysqladmin ping"
           --health-interval=10s
@@ -47,7 +49,7 @@ jobs:
     steps:
       - name: Verify MySQL connection from host
         run: |
-          mysql --host 127.0.0.1 --port 3306 -uroot -e "SHOW DATABASES"
+          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -pBestPasswordEver -e "SHOW DATABASES"
         if: matrix.db == 'mysql'
 
       - name: Checkout Redmine
@@ -103,6 +105,7 @@ jobs:
       - name: Run Redmine rake tasks
         env:
           RAILS_ENV: test
+          MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
         working-directory: redmine
         run: |
           bundle exec rake generate_secret_token
@@ -112,13 +115,13 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
-          REDMINE_VERSION: ${{ matrix.redmine }}
+          MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
         working-directory: redmine
         run: bundle exec rake redmine:plugins:test NAME=redmine_saml RUBYOPT="-W0"
 
       - name: Run uninstall test
         env:
           RAILS_ENV: test
-          REDMINE_VERSION: ${{ matrix.redmine }}
+          MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
         working-directory: redmine
         run: bundle exec rake redmine:plugins:migrate NAME=redmine_saml VERSION=0
