--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ['2.7', '2.6', '2.4']
+        ruby: ['2.7', '2.6']
         redmine: ['4.1-stable', '4.2-stable', 'master']
         db: ['postgres', 'mysql']
         exclude:
@@ -100,7 +100,8 @@ jobs:
       - name: Install Ruby dependencies
         working-directory: redmine
         run: |
-          bundle install --jobs=4 --retry=3 --without development
+          bundle config set --local without 'development'
+          bundle install --jobs=4 --retry=3
 
       - name: Run Redmine rake tasks
         env:
