--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -12,25 +12,17 @@ jobs:
 
     - name: Install package dependencies
       run: >
-        sudo apt-get install --yes --quiet
-        pandoc
+        sudo apt-get install --yes --quiet pandoc
+
+    - name: Setup Gemfile
+      run: |
+        cp test/support/gemfile.rb Gemfile
 
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.6
         bundler-cache: true
-
-    - name: Set Gemfile
-      run: |
-        echo "">> Gemfile
-        echo "group :test do">> Gemfile
-        echo "  gem 'pandoc-ruby', require: false" >> Gemfile
-        echo "  gem 'rubocop', require: false" >> Gemfile
-        echo "  gem 'rubocop-performance', require: false" >> Gemfile
-        echo "  gem 'rubocop-rails', require: false" >> Gemfile
-        echo "  gem 'slim_lint', require: false" >> Gemfile
-        echo "end" >> Gemfile
 
     - name: Setup gems
       run: |
