--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,14 +10,17 @@ jobs:
 
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['2.7', '3.0', '3.1', '3.2']
         redmine: ['5.0-stable', 'master']
         db: ['postgres', 'mysql']
+        exclude:
+          - ruby: '3.2'
+            redmine: 5.0-stable
       fail-fast: false
 
     services:
       postgres:
-        image: postgres:14
+        image: postgres:15
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -50,20 +53,20 @@ jobs:
         if: matrix.db == 'mysql'
 
       - name: Checkout Redmine
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: redmine/redmine
           ref: ${{ matrix.redmine }}
           path: redmine
 
       - name: Checkout additionals
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: AlphaNodes/additionals
           path: redmine/plugins/additionals
 
       - name: Checkout redmine_saml
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: redmine/plugins/redmine_saml
 
