--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         ruby: ['2.7', '3.0', '3.1', '3.2']
-        redmine: ['5.0-stable', 'master']
+        redmine: ['5.0-stable', '5.1-stable', 'master']
         db: ['postgres', 'mysql']
         exclude:
           - ruby: '3.2'
@@ -53,20 +53,20 @@ jobs:
         if: matrix.db == 'mysql'
 
       - name: Checkout Redmine
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: redmine/redmine
           ref: ${{ matrix.redmine }}
           path: redmine
 
       - name: Checkout additionals
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: AlphaNodes/additionals
           path: redmine/plugins/additionals
 
       - name: Checkout redmine_saml
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: redmine/plugins/redmine_saml
 
